--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "body-parser": "^1.19.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "express-session": "^1.17.2",
+    "mongoose": "^6.1.5",
     "passport": "^0.5.2"
   },
   "devDependencies": {
