--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,11 @@
   },
   "rules": {
     "no-console": "off",
-    "linebreak-style": ["error", "unix"]
+    "linebreak-style": ["error", "unix"],
+    "no-shadow": "off",
+    "implicit-arrow-linebreak": ["error", "beside"],
+    "no-param-reassign": ["error", { "props": false }],
+    "camelcase": "off",
+    "no-underscore-dangle": "off"
   }
 }
