--- a/package.json
+++ b/package.json
@@ -14,14 +14,23 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server-express": "^3.6.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.1",
+    "connect-mongo": "^4.6.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
+    "express-flash": "^0.0.2",
     "express-session": "^1.17.2",
+    "graphql-passport": "^0.6.4",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.5",
-    "passport": "^0.5.2"
+    "passport": "^0.5.2",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^6.1.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.16.7",
